--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ static/uploads/
 uploads/
 static/uploads/
 .env*
-*.json
+# *.json  <- This was causing the issue with package.json
 firebase-service-account*.json
 .config/
 .local/
